<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_loan_calculator"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_loan_calculator" />
        <item
            android:id="@+id/nav_legal_lawyers"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_legal_lawyers" />
        <item
            android:id="@+id/nav_conversion_value_tables"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_conversion_value_tables" />
        <item
            android:id="@+id/nav_upcoming_projects"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_upcoming_projects" />
        <item
            android:id="@+id/nav_analysis"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_analysis" />

    </group>
</menu>
